# openzen

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  add_license_header.sh  bitbucket-pipelines.yml  license_header.txt
bindings/: OpenZen.i
bindings/OpenZenCSharp/: EZenGnssProperty.cs  EZenImuProperty.cs  EZenSensorProperty.cs  OpenZen.cs  OpenZenFloatArray.cs  OpenZenPINVOKE.cs  OpenZen_wrap_csharp.cxx  SWIGTYPE_p_bool.cs  SWIGTYPE_p_float.cs  SWIGTYPE_p_int.cs  SWIGTYPE_p_p_ZenComponentHandle.cs  SWIGTYPE_p_unsigned_long.cs  SWIGTYPE_p_unsigned_long_long.cs  ZenAsyncStatus.cs  ZenClientHandle_t.cs  ZenComponentHandle_t.cs  ZenError.cs  ZenEvent.cs  ZenEventData.cs  ZenEventData_SensorDisconnected.cs  ZenEventData_SensorListingProgress.cs  ZenEventType.cs  ZenGnssData.cs  ZenGnssEvent.cs  ZenGnssFixCarrierPhaseSolution.cs  ZenGnssFixType.cs  ZenHeaveMotionData.cs  ZenImuData.cs  ZenImuEvent.cs  ZenLogLevel.cs  ZenOrientationOffsetMode.cs  ZenPropertyType.cs  ZenSensorDesc.cs  ZenSensorEvent.cs  ZenSensorHandle_t.cs  ZenSensorInitError.cs
bindings/OpenZenCSharpBindingTest/: OpenZenCSharpBindingTest.sln
bindings/OpenZenCSharpBindingTest/OpenZenCSharpBindingTest/: OpenZenCSharpBindingTest.csproj
bindings/OpenZenPython/: OpenZen.py  OpenZen_wrap_python.cxx
cmake/: OpenZenConfig.cmake
docs/: c_api.rst  conf.py  cpp_api.rst  csharp_api.rst  data.rst  examples.rst  getting_started.rst  index.rst  io_systems.rst  python_api.rst  ros.rst  setup.rst  supported_sensors.rst  unity_plugin.rst
examples/: CMakeLists.txt  ExampleCAPI.c  ExampleCpp.cpp  ExamplePython.py  ExamplePythonNewInterface.py  main.cpp  plain_c_example.c
examples/ExampleCSharp/: OpenZenCSharp.sln
examples/ExampleCSharp/OpenZenCSharp/: OpenZenCSharp.csproj  Program.cs
examples/ExampleCSharp/OpenZenCSharp/Properties/: AssemblyInfo.cs
examples/VisualStudio2017-OpenZenExample/OpenZenExample/: OpenZenExample.cpp  OpenZenExample.vcxproj  OpenZenExample.vcxproj.filters
examples/VisualStudio2019-OpenZenExample/: OpenZenExample.sln
examples/VisualStudio2019-OpenZenExample/OpenZenExample/: OpenZenExample.cpp  OpenZenExample.vcxproj
include/: IZenSensor.h  IZenSensorManager.h  OpenZen.h  OpenZenCAPI.h  ZenProtocol.h  ZenTypes.h
src/: ConnectionNegotiator.cpp  ConnectionNegotiator.h  DataProcessor.h  ISensorComponent.h  ISensorProperties.cpp  ISensorProperties.h  ImuHelpers.h  InternalTypes.h  LpMatrix.c  LpMatrix.cpp  LpMatrix.h  OpenZen.cpp  Sensor.cpp  Sensor.h  SensorClient.cpp  SensorClient.h  SensorComponent.h  SensorConfig.h  SensorManager.cpp  SensorManager.h  SensorProperties.cpp  SensorProperties.h  ZenTypesHelpers.h  ZmqDataProcessor.h
src/bindings/: OpenZenPython.cpp
src/communication/: ConnectionNegotiator.cpp  ConnectionNegotiator.h  EventCommunicator.h  Modbus.cpp  Modbus.h  ModbusCommunicator.cpp  ModbusCommunicator.h  SyncedModbusCommunicator.cpp  SyncedModbusCommunicator.h
src/components/: ComponentFactoryManager.cpp  ComponentFactoryManager.h  GnssComponent.cpp  GnssComponent.h  IComponentFactory.h  ImuComponent.cpp  ImuComponent.h  ImuIg1Component.cpp  ImuIg1Component.h  SensorParsingUtil.h
src/components/factories/: GnssComponentFactory.cpp  GnssComponentFactory.h  ImuComponentFactory.cpp  ImuComponentFactory.h
src/io/: BleDeviceFinder.cpp  BleDeviceFinder.h  BleDeviceHandler.cpp  BleDeviceHandler.h  IIoEventInterface.h  IIoInterface.h  IIoSystem.h  IoManager.cpp  IoManager.h  Modbus.cpp  Modbus.h
src/io/ble/: BleDeviceFinder.cpp  BleDeviceFinder.h  BleDeviceHandler.cpp  BleDeviceHandler.h
src/io/bluetooth/: BluetoothDeviceFinder.cpp  BluetoothDeviceFinder.h  BluetoothDeviceHandler.cpp  BluetoothDeviceHandler.h
src/io/can/: CanManager.cpp  CanManager.h  ICanChannel.h  PcanBasicChannel.cpp  PcanBasicChannel.h
src/io/interfaces/: AsyncIoInterface.cpp  AsyncIoInterface.h  BaseIoInterface.cpp  BaseIoInterface.h  BleInterface.cpp  BleInterface.h  BluetoothInterface.cpp  BluetoothInterface.h  CanInterface.cpp  CanInterface.h  FtdiUsbInterface.cpp  FtdiUsbInterface.h  SiUsbInterface.cpp  SiUsbInterface.h  TestSensorInterface.cpp  TestSensorInterface.h  ZeroMQInterface.cpp  ZeroMQInterface.h
src/io/interfaces/linux/: LinuxDeviceInterface.cpp  LinuxDeviceInterface.h
src/io/systems/: BleSystem.cpp  BleSystem.h  BluetoothSystem.cpp  BluetoothSystem.h  FtdiUsbSystem.cpp  FtdiUsbSystem.h  PcanBasicSystem.cpp  PcanBasicSystem.h  SiUsbSystem.cpp  SiUsbSystem.h  TestSensorSystem.cpp  TestSensorSystem.h  ZeroMQSystem.cpp  ZeroMQSystem.h
src/io/systems/linux/: LinuxDeviceQuery.h  (+2 more)
src/processors/: DataProcessor.h  ZmqDataProcessor.cpp  ZmqDataProcessor.h
src/properties/: BaseSensorPropertiesV0.h  BaseSensorPropertiesV1.h  CorePropertyRulesV1.h  GnssPropertyRulesV1.h  GnssSensorPropertiesV1.h  Ig1CoreProperties.cpp  Ig1CoreProperties.h  Ig1GnssProperties.cpp  Ig1GnssProperties.h  Ig1ImuProperties.cpp  Ig1ImuProperties.h  ImuPropertyRulesV1.h  ImuPropertyRulesV2.h  ImuSensorPropertiesV0.h  ImuSensorPropertiesV1.h  LegacyCoreProperties.cpp  LegacyCoreProperties.h  LegacyImuProperties.cpp  LegacyImuProperties.h
src/sensors/: BaseSensor.cpp  BaseSensor.h  IMUSensor.cpp  IMUSensor.h
src/streaming/: StreamingProtocol.h  ZenTypesSerialization.h
src/test/: ModbusTest.cpp  OpenZenTests.cpp
src/test/communication/: CommunicationNegotiatorTest.cpp  ConnectionNegotiatorTest.cpp  MockbusCommunicator.h
src/test/components/: GnssComponentTest.cpp
src/test/streaming/: SerializationTest.cpp  ZeroMQStreamingTest.cpp
src/utility/: Finally.h  IPlatformDll.h  LockingQueue.h  ManagedThread.h  Ownership.h  ReferenceCmp.h  StringView.h  ThreadFence.h
src/utility/bluetooth-serial-port/: BluetoothException.h
src/utility/gnss/: RTCM3NetworkSource.cpp  RTCM3NetworkSource.h  RTCM3Parser.h  RTCM3SerialSource.cpp  RTCM3SerialSource.h
src/utility/linux/: LinuxDll.cpp  LinuxDll.h
src/utility/posix/: PosixDll.cpp  PosixDll.h
src/utility/windows/: FindThisModule.cpp  FindThisModule.h  WindowsDll.cpp  WindowsDll.h
standalone_example/: CMakeLists.txt  main.cpp
(+14 files in other folders)
